# Yolov8_Openvino

./: CMakeLists.txt  README.md  Yolov8.cpp  Yolov8.py  coco.names
