cmake_minimum_required(VERSION 3.18)
project(Yolov8)
set("OpenCV_DIR" "path/to/opencv/build")
set("OpenVINO_DIR" "path/to/openvino/default/runtime/cmake")
set(OpenCV_INCLUDE_DIRS ${OpenCV_DIR}/include)
set(OpenCV_LIB_DIRS ${OpenCV_DIR}/x64/vc16/lib) 
set(OpenCV_LIBS "opencv_world480d.lib" "opencv_world480.lib")     
include_directories(${OpenCV_INCLUDE_DIRS}) 
link_directories(${OpenCV_LIB_DIRS})  
find_package(OpenCV QUIET)	
include_directories(${OpenCV_INCLUDE_DIRS})		
link_libraries(${OpenCV_LIBS}) 
add_executable(Yolov8 ${PROJECT_SOURCE_DIR}/Yolov8.cpp)   
find_package(OpenVINO COMPONENTS Runtime)
include_directories(${OpenVINO_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME}  openvino::runtime)
